# santa-cruz-wharf-planktoscope

./: .gitignore  README.md  feature_extractor.py  filter_by_esd.py  pyproject.toml  requirements.txt
data/: umap_embeddings.csv
data/Santa-cruz-wharf_20260304/Santa-cruz-wharf_20260304_WW/: ecotaxa_export.tsv
planktoscope_ml/: __init__.py  clustering.py  dataset.py  embeddings.py  index.py  preprocessing.py  train.py
